# CppCMakeTemplate

./: .gitmodules  CMakeLists.txt
Dependencies/: CMakeLists.txt
Source/: CCMakeTemplate.c  CCMakeTemplate.h  CMakeLists.txt  CppCMakeTemplate.cpp  CppCMakeTemplate.hpp  main.c  main.cpp
Tests/: CMakeLists.txt  ExampleTest.c
